fix spacing on slider

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -64,7 +64,7 @@ html {
                 background: $experienceBackground;
                 min-height: 100%;
                 #toolbelt {
-                    margin: 30px 0 0 0;
+                    margin: 30px 0;
                     li {
                         @include circle();
                         text-align: center;
